2007-12-18  Ankit Jain  <jankit@novell.com>

	Fix bug #349419.
	* templates/Makefile.template: Remove EXTRA_DIST, it gets generated.
	* MakefileHandler.cs: Honor DESTDIR for INSTALL_DIR.
	Based on patch by Wade Berrier.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: Moved PlatformService to
	  MD.Core.Gui. Removed old FileIconService class, which is now implemented
	  in PlatformService.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: API cleanup.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic: Updated.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Bump add-in versions.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Gettext/GetTextTool.cs:
	* MonoDevelop.Gettext/TranslationProject.cs: Do not call Gnome.Vfs directly;
	  utilize the PlatformService to get mime information.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.mdp, Makefile.am: Directory reorganization.

2007-12-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/Catalog.cs: Fix build.

2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/Translation.cs: Added properties for getting the Po
	  and Out files.
	* Makefile.am, MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.ExtensionNodes/ExcludeRegex.cs,
	  MonoDevelop.Gettext.ExtensionNodes/IncludeExtensionNode.cs,
	  MonoDevelop.Gettext.ExtensionNodes/RegexScannerExtensionNode.cs,
	  MonoDevelop.Gettext.ExtensionNodes/TransformExtensionNode.cs,
	  MonoDevelop.Gettext.ExtensionNodes/XmlRegexScannerExtensionNode.cs,
	  MonoDevelop.Gettext.mdp, MonoDevelop.Gettext/Catalog.cs,
	  MonoDevelop.Gettext/IFileScanner.cs,